force-app/main/default/objects/CliqueWheel_Winners__c/CliqueWheel_Winners__c.object-meta.xml
<CustomObject>
    <label>CliqueWheel Winners</label>
    <nameField>
        <label>CliqueWheel Winners Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CliqueWheel Winners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>