force-app/main/default/objects/CliqueWheel_Winners__c/fields/Cash_or_Prize__c.field-meta.xml
<CustomField>
    <fullName>Cash_or_Prize__c</fullName>
    <label>Cash or Prize?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Prize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>