force-app/main/default/objects/CliqueWheel_Winners__c/fields/CliqueWheel_Winner_ID__c.field-meta.xml
<CustomField>
    <fullName>CliqueWheel_Winner_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CliqueWheel Winner ID</label>
    <type>Text</type>
</CustomField>