force-app/main/default/objects/CliqueWheel_Winners__c/fields/DocuSign_Link__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Link__c</fullName>
    <label>DocuSign Link</label>
    <type>Url</type>
</CustomField>