force-app/main/default/objects/CliqueWheel_Winners__c/fields/Prize_ETA__c.field-meta.xml
<CustomField>
    <fullName>Prize_ETA__c</fullName>
    <label>Prize ETA</label>
    <type>Date</type>
</CustomField>