force-app/main/default/objects/CliqueWheel_Winners__c/fields/Prize_Type__c.field-meta.xml
<CustomField>
    <fullName>Prize_Type__c</fullName>
    <label>Prize Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>