force-app/main/default/objects/CliqueWheel_Winners__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forms Submitted</fullName>
            </value>
            <value>
                <fullName>Prize Shipped</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Prize Fulfillment</fullName>
                <isActive>false</isActive>
                <label>Prize Fulfillment</label>
            </value>
            <value>
                <fullName>Winner Accepted</fullName>
                <isActive>false</isActive>
                <label>Winner Accepted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>