force-app/main/default/objects/CliqueWheel_Winners__c/fields/Sweep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sweep_Name__c</fullName>
    <label>Sweep Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>