force-app/main/default/objects/CliqueWheel_Winners__c/fields/Total_Prize_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Prize_Value__c</fullName>
    <label>Total Prize Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>