force-app/main/default/objects/CliqueWheel_Winners__c/fields/W9_Link__c.field-meta.xml
<CustomField>
    <fullName>W9_Link__c</fullName>
    <label>W9 Link</label>
    <type>Url</type>
</CustomField>